adjust sizing of project cards to avoid cutoff

--- a/src/scenes/Projects/Projects.css
+++ b/src/scenes/Projects/Projects.css
@@ -36,7 +36,9 @@
     color: black;
     border-radius: 25px;
     padding: 20px;
-    width: 300px;
+    width: 30%;
+    min-width: 250px;
+    max-width: 300px;
     height: 650px;
     text-wrap: wrap;
     text-overflow: clip;
